Correct the vertical spacing of ead/rcr/video/audio pages.  The old dl had an <hr> tag - this version has a border bottom on the main-header div;  it also needed bottom padding and a bottom margin.

--- a/app/assets/stylesheets/tdl_common.scss
+++ b/app/assets/stylesheets/tdl_common.scss
@@ -188,7 +188,8 @@ h3 {
 }
 
 .main-header {
-  margin-bottom: 3px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
   margin-top: 2px;
 
   p {
